--- a/WEB/home.html
+++ b/WEB/home.html
@@ -65,7 +65,7 @@
                 <div class="swiper-wrapper">
 
                 <div class="swiper-slide image" >
-                    <img class="item" src="IMG/niguiri variados.jpg" alt="" >
+                    <img class="item" src="IMG/f_niguiri variados.jpg" alt="" >
                     <div class="content">
                         <h1 class="food-price">R$50,00</h1>
                         <div class="content-bottom">
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="swiper-slide image" >
-                    <img class="item" src="IMG/yakisoba.jpg" alt="" >
+                    <img class="item" src="IMG/q_yakisoba.jpg" alt="" >
                     <div class="content">
                         <h1 class="food-price">R$40,00</h1>
                         <div class="content-bottom">
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="swiper-slide image" >
-                    <img class="item" src="IMG/Sukiyaki.jpg" alt="" >
+                    <img class="item" src="IMG/q_Sukiyaki.jpg" alt="" >
                     <div class="content">
                         <h1 class="food-price">R$60,00</h1>
                         <div class="content-bottom">
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="swiper-slide image" >
-                    <img class="item" src="IMG/ramen.jpg" alt="" >
+                    <img class="item" src="IMG/q_ramen.jpg" alt="" >
                     <div class="content">
                         <h1 class="food-price">R$40,00</h1>
                         <div class="content-bottom">
