--- a/WEB/sobrenos.html
+++ b/WEB/sobrenos.html
@@ -71,7 +71,7 @@
         </div>
         <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
 		    <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
-            <a href="https://1map.com/pt/map-embed">1 Map</a></div>
+            <a href="https://1map.com/pt/map-embed"><img src="IMG/map.png" alt=""></a></div>
     </div>
 
     <section class="ava">
